--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -345,6 +345,9 @@
     "applications": "Applications",
     "matchPositions": "Match Positions",
     "matchedPositions": "Matched Positions",
+    "removeApplication": "Remove Application",
+    "removeApplicationConfirm": "Remove {{name}} from this position? They will return to the matching list.",
+    "applicationRemoved": "Application removed successfully.",
     "positionCreated": "Position created successfully",
     "positionUpdated": "Position updated successfully",
     "positionDeleted": "Position deleted successfully",
@@ -501,6 +504,7 @@
     "matchedPositions": "Matched Positions",
     "viewMatches": "View Matches",
     "confirmMatch": "Confirm Match",
+    "alreadyMatched": "This CV is already matched with the selected position",
     "downloadCV": "Download CV",
     "uploadFiles": "Upload Files",
     "deleteFile": "Delete File",
