--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -315,6 +315,9 @@
     "applications": "Başvurular",
     "matchPositions": "Pozisyonları Eşleştir",
     "matchedPositions": "Eşleşen Pozisyonlar",
+    "removeApplication": "Başvuruyu Kaldır",
+    "removeApplicationConfirm": "{{name}} kişisinin başvurusunu bu pozisyondan kaldırmak istiyor musunuz? Havuz eşleşme listesine geri dönecek.",
+    "applicationRemoved": "Başvuru başarıyla kaldırıldı.",
     "positionCreated": "Pozisyon başarıyla oluşturuldu",
     "positionUpdated": "Pozisyon başarıyla güncellendi",
     "positionDeleted": "Pozisyon başarıyla silindi",
@@ -441,6 +444,7 @@
     "matchedPositions": "Eşleşen Pozisyonlar",
     "viewMatches": "Eşleşmeleri Görüntüle",
     "confirmMatch": "Eşleşmeyi Onayla",
+    "alreadyMatched": "Bu CV mevcut pozisyonla zaten eşleştirilmiş",
     "downloadCV": "CV İndir",
     "uploadFiles": "Dosya Yükle",
     "deleteFile": "Dosya Sil",
