--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -80,6 +80,7 @@
     "valid": "Valid",
     "upTo": "Up to",
     "share": "Share",
+    "modules": "Modules",
     "rowsPerPage": "Rows per page",
     "linkCopied": "Link copied to clipboard",
     "score": "Score",
@@ -548,6 +549,7 @@
     "updatedAt": "Updated At",
     "createPoolCV": "Create Pool CV",
     "editPoolCV": "Edit Pool CV",
+    "addCVToTalentPool": "Add CV to Talent Pool",
     "deletePoolCV": "Delete Pool CV",
     "poolCVDetails": "Pool CV Details",
     "matchPositions": "Match Positions",
