--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -483,6 +483,7 @@
     "inReview": "In Review",
     "inreview": "In Review",
     "forwarded": "Forwarded",
+    "meetingScheduled": "Meeting Scheduled",
     "accepted": "Accepted",
     "acceptApplication": "Accept Application",
     "rejectApplication": "Reject Application",
