--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -465,6 +465,7 @@
     "inReview": "İncelemede",
     "inreview": "İncelemede",
     "forwarded": "Yönlendirildi",
+    "meetingScheduled": "Toplantı Planlandı",
     "accepted": "Kabul Edildi",
     "acceptApplication": "Başvuruyu Kabul Et",
     "rejectApplication": "Başvuruyu Reddet",
