--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -444,6 +444,7 @@
     "inreview": "In Review",
     "forwarded": "Forwarded",
     "meetingScheduled": "Meeting Scheduled",
+    "meetingscheduled": "Meeting Scheduled",
     "accepted": "Accepted",
     "rejected": "Rejected",
     "withdrawn": "Withdrawn",
