--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -385,6 +385,7 @@
     "inreview": "İncelemede",
     "forwarded": "Yönlendirildi",
     "meetingScheduled": "Toplantı Planlandı",
+    "meetingscheduled": "Toplantı Planlandı",
     "accepted": "Kabul Edildi",
     "rejected": "Reddedildi",
     "withdrawn": "Geri Çekildi",
