--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -70,10 +70,12 @@
     "updatedBy": "Updated By",
     "noData": "No data available",
     "noResults": "No results found",
+    "notSpecified": "Not specified",
     "select": "Select",
     "all": "All",
     "none": "None",
     "other": "Other",
+    "more": "more",
     "optional": "Optional",
     "required": "Required",
     "invalid": "Invalid",
@@ -402,7 +404,9 @@
     "minExperienceYears": "Minimum Experience (years)",
     "minSalary": "Min Salary",
     "maxSalary": "Max Salary",
-    "onsite": "Onsite"
+    "onsite": "Onsite",
+    "noDepartment": "No department specified",
+    "noLocation": "No location specified"
   },
   "application": {
     "failedToLoadPosition": "Failed to load position details",
@@ -580,10 +584,15 @@
     "noLocation": "No location",
     "aiSimilarity": "AI Similarity",
     "missing": "Missing",
+    "missingRequiredSkills": "Missing Required Skills",
+    "matchedSkills": "Matched Skills",
+    "breakdown": "Detailed Analysis",
+    "positionsFound": "positions found",
     "noMatchingPositions": "No matching positions found",
     "viewPosition": "View Position",
     "matching": "Matching...",
     "match": "Match",
+    "alreadyMatched": "Already Matched",
     "tckn": "TCKN",
     "birthDate": "Birth Date",
     "address": "Address",
