--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -153,6 +153,7 @@
   "employee": {
     "title": "Employee",
     "titlePlural": "Employees",
+    "employee": "Employee",
     "firstName": "First Name",
     "lastName": "Last Name",
     "fullName": "Full Name",
@@ -325,6 +326,7 @@
   "project": {
     "title": "Project",
     "titlePlural": "Projects",
+    "project": "Project",
     "name": "Project Name",
     "code": "Project Code",
     "description": "Description",
