fix: match for company manager pool cv

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -54,6 +54,7 @@
     "activate": "Activate",
     "deactivate": "Deactivate",
     "refresh": "Refresh",
+    "refreshed": "Refreshed",
     "reload": "Reload",
     "yes": "Yes",
     "no": "No",
@@ -90,6 +91,7 @@
     "pageOf": "Page {{current}} of {{total}}",
     "of": "of",
     "years": "years",
+    "matching": "Matching...",
     "level": "Level",
     "notAvailable": "N/A",
     "public": "Public",
@@ -447,6 +449,8 @@
     "deleteApplication": "Delete Application",
     "applicationDetails": "Application Details",
     "viewApplicantDetails": "View Applicant Details",
+    "viewApplicantProfile": "View Applicant Profile",
+    "viewFullProfile": "View Full Applicant Profile",
     "addComment": "Add Comment",
     "addRating": "Add Rating",
     "editRating": "Edit Rating",
