--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -55,6 +55,7 @@
     "activate": "Aktifleştir",
     "deactivate": "Devre Dışı Bırak",
     "refresh": "Yenile",
+    "refreshed": "Yenilendi",
     "reload": "Yeniden Yükle",
     "yes": "Evet",
     "no": "Hayır",
@@ -94,6 +95,7 @@
     "pageOf": "Sayfa {{current}} / {{total}}",
     "of": "arasında",
     "years": "yıl",
+    "matching": "Eşleştiriliyor...",
     "level": "Seviye",
     "notAvailable": "Mevcut Değil",
     "public": "Herkese Açık",
@@ -449,6 +451,8 @@
     "deleteApplication": "Başvuru Sil",
     "applicationDetails": "Başvuru Detayları",
     "viewApplicantDetails": "Başvuran Bilgilerini İncele",
+    "viewApplicantProfile": "Başvuran Profilini Görüntüle",
+    "viewFullProfile": "Tam Başvuran Profilini Görüntüle",
     "addComment": "Yorum Ekle",
     "addRating": "Değerlendirme Ekle",
     "editRating": "Değerlendirme Düzenle",
