feature/application-withdrawn: fix incorrect button name

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -484,6 +484,7 @@
     "meetingScheduledSuccess": "Meeting scheduled successfully",
     "rejected": "Rejected",
     "withdrawn": "Withdrawn",
+    "withdraw": "Withdraw",
     "noApplicationsDescription": "There are no applications to display.",
     "searchPlaceholder": "Search applications...",
     "appliedAt": "Applied Date",
@@ -493,7 +494,6 @@
     "inReview": "In Review",
     "inreview": "In Review",
     "forwarded": "Forwarded",
-    "meetingScheduled": "Meeting Scheduled",
     "accepted": "Accepted",
     "acceptApplication": "Accept Application",
     "rejectApplication": "Reject Application",
@@ -598,7 +598,6 @@
     "viewPosition": "View Position",
     "matching": "Matching...",
     "match": "Match",
-    "alreadyMatched": "Already Matched",
     "tckn": "TCKN",
     "birthDate": "Birth Date",
     "address": "Address",
