feature/application-withdrawn: add view position page inside the applicaiton details page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -383,6 +383,7 @@
     "positionDetails": "Position Details",
     "viewApplications": "View Applications",
     "viewPosition": "View Position",
+    "viewPosition": "View Position",
     "applications": "Applications",
     "matchPositions": "Match Positions",
     "matchedPositions": "Matched Positions",
