--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -384,6 +384,7 @@
     "positionDetails": "Pozisyon Detayları",
     "viewApplications": "Başvuruları Görüntüle",
     "viewPosition": "Pozisyonu Görüntüle",
+    "viewPosition": "Pozisyonu Görüntüle",
     "applications": "Başvurular",
     "matchPositions": "Pozisyonları Eşleştir",
     "matchedPositions": "Eşleşen Pozisyonlar",
