--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -386,6 +386,9 @@
     "removeApplication": "Başvuruyu Kaldır",
     "removeApplicationConfirm": "{{name}} kişisinin başvurusunu bu pozisyondan kaldırmak istiyor musunuz? Havuz eşleşme listesine geri dönecek.",
     "applicationRemoved": "Başvuru başarıyla kaldırıldı.",
+    "rejectApplication": "Başvuruyu Reddet",
+    "rejectApplicationConfirm": "{{name}} kişisinin başvurusunu reddetmek istiyor musunuz?",
+    "applicationRejected": "Başvuru reddedildi.",
     "positionCreated": "Pozisyon başarıyla oluşturuldu",
     "positionUpdated": "Pozisyon başarıyla güncellendi",
     "positionDeleted": "Pozisyon başarıyla silindi",
@@ -529,7 +532,16 @@
     "reviewApplication": "Başvuruyu İncele",
     "addInternalComment": "İç Yorum Ekle",
     "reject": "Reddet",
-    "accept": "Kabul Et"
+    "accept": "Kabul Et",
+    "withdrawApplication": "Başvuruyu Geri Çek",
+    "withdrawConfirm": "Bu başvuruyu geri çekmek istediğinizden emin misiniz? Bağlı havuz CV aktif hale gelecek ve tekrar eşleştirme yapılabilecek.",
+    "applicationWithdrawn": "Başvuru başarıyla geri çekildi. Havuz CV artık eşleşme için aktif.",
+    "failedToWithdraw": "Başvuru geri çekilemedi",
+    "viewPositionDetails": "Pozisyon Detaylarını Görüntüle",
+    "rejectApplication": "Başvuruyu Reddet",
+    "rejectConfirm": "Bu başvuruyu reddetmek istediğinizden emin misiniz? Eşleşme kaydı silinecek ve başvuran tekrar başvuru yapabilecek.",
+    "applicationRejected": "Başvuru başarıyla reddedildi.",
+    "failedToReject": "Başvuru reddedilemedi"
   },
   "poolCV": {
     "title": "Havuz CV",
@@ -570,6 +582,8 @@
     "poolCVCreated": "Havuz CV başarıyla oluşturuldu",
     "poolCVUpdated": "Havuz CV başarıyla güncellendi",
     "poolCVDeleted": "Havuz CV başarıyla silindi",
+    "cannotDeleteHasActiveApplications": "Bu Havuz CV silinemez. Aktif başvurular bulunmaktadır. Lütfen önce tüm başvuruları reddedin veya geri çekin.",
+    "cannotDeleteHasMatchedPositions": "Bu Havuz CV silinemez. Eşleşmiş pozisyon veya pozisyonlar mevcuttur. Lütfen önce pozisyon eşleşmelerini kaldırın.",
     "matchRecorded": "Eşleşme başarıyla kaydedildi",
     "applicationCreated": "Başvuru başarıyla oluşturuldu",
     "fileUploaded": "Dosya başarıyla yüklendi",
