--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -533,7 +533,9 @@
     "reject": "Reject",
     "accept": "Accept",
     "forwardApplication": "Forward Application",
-    "recipients": "Recipients (comma separated emails)",
+    "recipients": "Recipients",
+    "searchUsersPlaceholder": "Select or search users (EMPLOYEE / MANAGER)",
+    "noUsersFound": "No users found",
     "messageOptional": "Message (optional)",
     "pleaseEnterRecipientEmail": "Please enter at least one recipient email",
     "applicationForwarded": "Application forwarded",
