--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -522,7 +522,9 @@
     "rejected": "Reddedildi",
     "withdrawn": "Geri Çekildi",
     "forwardApplication": "Başvuruyu Yönlendir",
-    "recipients": "Alıcılar (virgülle ayrılmış e-postalar)",
+    "recipients": "Alıcılar",
+    "searchUsersPlaceholder": "Kullanıcı seçin veya arayın (EMPLOYEE / MANAGER)",
+    "noUsersFound": "Kullanıcı bulunamadı",
     "messageOptional": "Mesaj (isteğe bağlı)",
     "pleaseEnterRecipientEmail": "Lütfen en az bir alıcı e-postası girin",
     "applicationForwarded": "Başvuru yönlendirildi",
