added button fix

--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -478,6 +478,8 @@
     "forwarded": "Yönlendirildi",
     "meetingScheduled": "Toplantı Planlandı",
     "accepted": "Kabul Edildi",
+    "fullyevaluated": "Tamamen Değerlendirildi",
+    "partiallyevaluated": "Kısmen Değerlendirildi",
     "acceptApplication": "Başvuruyu Kabul Et",
     "rejectApplication": "Başvuruyu Reddet",
     "applyingFor": "Başvurulan",
@@ -517,7 +519,6 @@
     "deleteConfirm": "Bu başvuruyu silmek istediğinizden emin misiniz?",
     "deleteFileConfirm": "Bu dosyayı silmek istediğinizden emin misiniz?",
     "setStatus": "Olarak Ayarla",
-    "meetingScheduled": "Toplantı Planlandı",
     "meetingScheduledSuccess": "Toplantı başarıyla planlandı",
     "rejected": "Reddedildi",
     "withdrawn": "Geri Çekildi",
