--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -483,7 +483,6 @@
     "deleteFileConfirm": "Are you sure you want to delete this file?",
     "setStatus": "Set as",
     "noApplications": "No applications",
-    "meetingScheduled": "Meeting Scheduled",
     "meetingScheduledSuccess": "Meeting scheduled successfully",
     "rejected": "Rejected",
     "withdrawn": "Withdrawn",
@@ -498,6 +497,8 @@
     "forwarded": "Forwarded",
     "meetingScheduled": "Meeting Scheduled",
     "accepted": "Accepted",
+    "fullyevaluated": "Fully Evaluated",
+    "partiallyevaluated": "Partially Evaluated",
     "acceptApplication": "Accept Application",
     "rejectApplication": "Reject Application",
     "applyingFor": "Applying for",
