--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -113,7 +113,8 @@
     "sortByAsc": "Artan Sırala",
     "sortByDesc": "Azalan Sırala",
     "hideColumn": "Sütunu Gizle",
-    "manageColumns": "Sütunları Yönet"
+    "manageColumns": "Sütunları Yönet",
+    "company": "Şirket"
   },
   "navigation": {
     "dashboard": "Pano",
