--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -71,6 +71,8 @@
     "updatedBy": "Updated By",
     "noData": "No data available",
     "noResults": "No results found",
+    "candidates": "candidate",
+    "candidates_plural": "candidates",
     "notSpecified": "Not specified",
     "select": "Select",
     "all": "All",
@@ -398,6 +400,29 @@
     "positionDeleted": "Position deleted successfully",
     "positionArchived": "Position archived successfully",
     "positionActivated": "Position activated successfully",
+    "findBestCandidates": "Find Best Candidates",
+    "bestCandidates": "Best Candidates",
+    "matchScore": "Match Score",
+    "matchLevelLabel": "Match Level",
+    "recommendation": "Recommendation",
+    "detailedAnalysis": "Detailed Analysis",
+    "skillsScore": "Skills Score",
+    "experienceScore": "Experience Score",
+    "languageScore": "Language Score",
+    "educationScore": "Education Score",
+    "locationScore": "Location Score",
+    "salaryScore": "Salary Score",
+    "semanticScore": "Semantic Score",
+    "details": "Details",
+    "matchedSkills": "Matched Skills",
+    "missingRequiredSkills": "Missing Required Skills",
+    "noCandidatesFound": "No candidates found",
+    "matchLevel": {
+      "excellent": "Excellent",
+      "good": "Good",
+      "fair": "Fair",
+      "poor": "Poor"
+    },
     "deleteConfirm": "Are you sure you want to delete this position?",
     "archiveConfirm": "Are you sure you want to archive this position?",
     "activateConfirm": "Are you sure you want to activate this position?",
