--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -72,6 +72,8 @@
     "updatedBy": "Güncelleyen",
     "noData": "Veri yok",
     "noResults": "Sonuç bulunamadı",
+    "candidates": "aday",
+    "candidates_plural": "aday",
     "notSpecified": "Belirtilmemiş",
     "select": "Seç",
     "all": "Tümü",
@@ -399,6 +401,29 @@
     "positionDeleted": "Pozisyon başarıyla silindi",
     "positionArchived": "Pozisyon başarıyla arşivlendi",
     "positionActivated": "Pozisyon başarıyla aktifleştirildi",
+    "findBestCandidates": "En İyi Adayları Bul",
+    "bestCandidates": "En İyi Adaylar",
+    "matchScore": "Eşleşme Skoru",
+    "matchLevelLabel": "Eşleşme Seviyesi",
+    "recommendation": "Öneri",
+    "detailedAnalysis": "Detaylı Analiz",
+    "skillsScore": "Yetenek Skoru",
+    "experienceScore": "Deneyim Skoru",
+    "languageScore": "Dil Skoru",
+    "educationScore": "Eğitim Skoru",
+    "locationScore": "Konum Skoru",
+    "salaryScore": "Maaş Skoru",
+    "semanticScore": "Anlamsal Skor",
+    "details": "Detaylar",
+    "matchedSkills": "Eşleşen Yetenekler",
+    "missingRequiredSkills": "Eksik Gerekli Yetenekler",
+    "noCandidatesFound": "Aday bulunamadı",
+    "matchLevel": {
+      "excellent": "Mükemmel",
+      "good": "İyi",
+      "fair": "Orta",
+      "poor": "Zayıf"
+    },
     "deleteConfirm": "Bu pozisyonu silmek istediğinizden emin misiniz?",
     "archiveConfirm": "Bu pozisyonu arşivlemek istediğinizden emin misiniz?",
     "activateConfirm": "Bu pozisyonu aktifleştirmek istediğinizden emin misiniz?",
